--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ body{
 }
 
 main{
-    min-height: 30rem;
+    min-height: fit-content;
     min-width: 35rem;
     background-color: var(--background-color);
     border-radius: 10px;
@@ -75,7 +75,7 @@ header p {
     border: 0;
     cursor:grab;
     box-shadow: none;
-    transition: all 0.1s ease;
+    transition: all 0.01s ease;
 }
 
 .hands button:hover{
@@ -108,7 +108,7 @@ header p {
     font-weight: bold;
     border: none;
     cursor: pointer;
-    transition: all 0.8s ease-in;
+    transition: all 0.1s ease-in;
 }
 
 .result button:hover{
